<?xml version="1.0" encoding="utf-8"?><!--
Description:
Used to edit the availability of an employee.

Author: Sergei Borja
Date Created: 2023-11-17
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:orientation="vertical">

    <!--Top App Bar-->
    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <!--Menu-->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarEditDayOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_save"
            app:navigationIcon="@drawable/baseline_arrow_back_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <!--Profile Image-->
    <ImageView
        android:id="@+id/profileImageDetailed"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_mask"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/profilePicDescription"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_profile_picture"
        app:tint="@color/off_white" />

    <!--Editing Employee Message-->
    <TextView
        android:id="@+id/editMsgTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/editDayOffTitle"
        android:textSize="10sp"
        android:textStyle="bold"
        tools:ignore="SmallSp" />

    <!--Employee Name-->
    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!--Divider-->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/black" />

    <!--Day Off Detail Container-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/black"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <!--Day Off Detail Title-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/enterDayOffTitle"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--Date Text-->
        <TextView
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/dateLabel"
            android:textColor="@color/off_white"
            android:textStyle="bold" />

        <!--Date Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!--Year Field Layout-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/yearLayout"
                style="@style/ThemeOverlay.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <!--Year Field Text Input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/yearET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yearHint"
                    android:inputType="text"
                    android:padding="12dp"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Month Field Layout-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/monthLayout"
                style="@style/ThemeOverlay.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1">

                <!--Month Field Text Input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/monthET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/monthHint"
                    android:inputType="text"
                    android:padding="12dp"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Day Field Layout-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dayLayout"
                style="@style/ThemeOverlay.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <!--Day Field Text Input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dayET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dayHint"
                    android:inputType="text"
                    android:padding="12dp"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--Reason Text-->
        <TextView
            android:id="@+id/txtReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/reasonLabel"
            android:textColor="@color/off_white"
            android:textStyle="bold" />

        <!--Reason Field Layout-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reasonLayout"
            style="@style/ThemeOverlay.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <!--Reason Field Text Layout-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reasonET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reasonHint"
                android:inputType="text"
                android:padding="12dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!--Delete Day Off Button Row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <!--Delete Day Off Button-->
        <Button
            android:id="@+id/btnDeleteDayOff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/deleteDayOff"
            android:textColor="@color/off_white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>